# QuantTrading

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  KNOWN_ISSUES.md  PROJECT_COMPASS.md  README.md  pyproject.toml
archive/: README.md
config/: README.md
docs/: INDEX.md
docs/architecture/: DEPENDENCY_RULES.md  MODULE_MAP.md  OVERVIEW.md
docs/decisions/: ADR-0001-project-governance.md  ADR-0002-market-history-stack.md  ADR-0003-project-compass.md  ADR-0004-canonical-system-architecture.md  ADR-0005-two-stage-algorithm-architecture.md  ADR-0006-independent-risk-control-gate.md  ADR-0007-algorithm-control-plane.md  ADR-0008-change-admission-and-conflict-prevention.md  ADR-0009-central-sqlite-factor-history.md  ADR-0010-paper-live-execution-boundaries.md  ADR-0011-restricted-factor-authoring.md  ADR-0012-portfolio-accounting-ledger.md  ADR-0013-isolated-historical-backtesting.md  ADR-0014-asset-market-factor-and-sizing.md  ADR-0015-simulation-decision-journal.md  ADR-0016-unified-algorithm-run-history.md  ADR-0017-factor-history-and-decision-trace.md  ADR-0018-factor-research-visualization.md  ADR-0019-research-capital-allocation-conservation.md  ADR-0020-manual-asset-state-history.md  ADR-0021-bounded-target-position-research.md  ADR-0022-manual-standardized-price-state-research.md  ADR-0023-linked-standardized-state-target-position-preview.md  ADR-0024-target-adjustment-decision-preview.md  ADR-0026-single-asset-exposure-cap-preview.md  (+4 more)
logs/: BUG_LOG.md  EDIT_LOG.md
runtime/: README.md
scripts/: README.md
src/: README.md
tests/: README.md  conftest.py
(+373 files in other folders)
